[tool.poetry]
name = "linkml_common"
version = "0.1.0"
description = "Common Data Model Elements"
authors = ["LinkML Common <my-name@my-org.org>"]
license = "MIT"
readme = "README.md"
include = ["README.md", "src/linkml_common/schema", "project"]

[tool.poetry.dependencies]
python = "^3.9"
linkml-runtime = "^1.6.3"
neo4j = "^5.14.1"
linkml-transformer = "^0.2.2"

[tool.poetry.group.dev.dependencies]
linkml = "^1.7.6"
schema-automator = "^0.4.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry.dev-dependencies]
linkml = "^1.3.5"
mkdocs-material = "^8.2.8"
mkdocs-mermaid2-plugin = "^0.6.0"
schemasheets = "^0.1.14"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.extras]
docs = ["linkml", "mkdocs-material"]